find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(OpenGL REQUIRED)

ee_setup_project("EssexEngineSDL2Driver" "src/Drivers/SDL2Driver/")
target_link_libraries(EssexEngineSDL2Driver ${SDL2_LIBRARY})
target_link_libraries(EssexEngineSDL2Driver ${SDL2_IMAGE_LIBRARY})
target_link_libraries(EssexEngineSDL2Driver ${SDL2_TTF_LIBRARY})
target_link_libraries(EssexEngineSDL2Driver ${SDL2_MIXER_LIBRARY})
target_link_libraries(EssexEngineSDL2Driver ${OPENGL_LIBRARIES})
target_link_libraries(EssexEngineSDL2Driver EssexEngineCore)
target_link_libraries(EssexEngineSDL2Driver EssexEngineGfxDaemon)
target_link_libraries(EssexEngineSDL2Driver EssexEngineSfxDaemon)
target_link_libraries(EssexEngineSDL2Driver EssexEngineInputDaemon)
target_link_libraries(EssexEngineSDL2Driver EssexEngineSystemDaemon)
target_link_libraries(EssexEngineSDL2Driver EssexEngineFileSystemDaemon)

target_include_directories(EssexEngineSDL2Driver PRIVATE ${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS})
